[gd_scene load_steps=5 format=3 uid="uid://68utmv55kwsg"]

[ext_resource type="Script" path="res://scripts/music_player.gd" id="1_4gejb"]
[ext_resource type="AudioStream" uid="uid://cbkbi7h60wacw" path="res://SOUND/BGMusic/Mellow_Ambient_Track.ogg" id="2_tf1ni"]
[ext_resource type="AudioStream" uid="uid://cftx4e2y0iuur" path="res://SOUND/BGMusic/Mysterious_Theme.ogg" id="3_v0175"]
[ext_resource type="AudioStream" uid="uid://cfdy32yqffif6" path="res://SOUND/BGMusic/Simple_Lofi_Piano_Loop.ogg" id="4_xunmd"]

[node name="MusicPlayer" type="Node2D"]
script = ExtResource("1_4gejb")

[node name="Song1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_tf1ni")

[node name="Song2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_v0175")

[node name="Song3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xunmd")

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
